# predatorprey-esp

./: .gitignore  CMakeLists.txt  README  common.cpp  common.h  doxy_config  esp_predprey.cfg  getit.sh  main.cpp  paramSearch.py  plot_fitness.py  plot_gen_vs_fitness.py  processCoev.py  rename_max.py  run.sh  runAll.sh  zipAll.sh  zipit.sh  zipitchamp.sh
Domain/: Agent.h  DomainOne.cpp  DomainOne.h  DomainTotal.cpp  DomainTotal.h  GridWorld.cpp  GridWorld.h  Hunter.cpp  Hunter.h  Predator.h  PredatorEsp.cpp  PredatorEsp.h  PredatorNaive.h  PredatorRandom.cpp  PredatorRandom.h  Prey.cpp  Prey.h  Visualizer.h
ESP_predprey/: CMakeLists.txt  ESP.C  Environment.h  Esp.h  Makefile  Network.C  Network.h  PredPrey.C  PredPrey.h  PredPreyST1.C  PredPreyST1.h  PredPreyST2.C  PredPreyST2.h  README  condor_run  config_file.txt  config_file.txt~  esp-predprey  esp_predprey.cfg  extract_av_fitness.pl  install_dependencies.sh  makefile  pred_prey_location.txt  run.sh  run.sh~  signal-handler.C  signal-handler.h
Esp/: FeedForwardNetwork.cpp  FullyRecurrentNetwork.h  Network.h  NetworkContainer.h  NetworkContainerCombiner.cpp  NetworkContainerCombiner.h  NetworkContainerEsp.cpp  NetworkContainerEsp.h  NetworkContainerSelection.h  NetworkContainerSubtask.cpp  NetworkContainerSubtaskInverted.h  Neuron.h  SecondOrderRecurrentNetwork.cpp  SecondOrderRecurrentNetwork.h  SimpleRecurrentNetwork.cpp  SubPop.cpp  SubPop.h
Experiment/: EspExperiment.cpp  EspExperiment.h  EspExperimentSubtask.cpp  Experiment.h
PredPreyHunter/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  esp_startgenes  experiments.cpp  genome.cpp  neat  neatmain.cpp  network.cpp  singleprey_startgenes  singlepreyhunter_startgenes
Predprey/: .singleprey_startgenes.swp  Makefile~  champ  experiments.cpp  experiments.cpp~  experiments.h  experiments.h~  genome.cpp  genome.cpp~  neatmain.cpp~  network.cpp  network.cpp~  organism.h  population.cpp~  predprey_startgenes~  results_new_weights  singleprey_startgenes~
Predprey/Debug/: experiments.d  gene.d  genome.d  innovation.d  link.d  makefile  neat.d  neatmain.d  network.d  nnode.d  organism.d  population.d  species.d  subdir.mk  trait.d
Predprey/NEAT_ESP/: .project
anand/: Agent.cpp  Agent.h  CMakeLists.txt  ComboNetwork.h  Domain.cpp  Domain.h  DomainHunter.cpp  DomainHunter.h  DomainPrey.cpp  DomainPrey.h  DomainTotal.cpp  DomainTotal.h  Esp.cpp  Esp.h  EspExperiment.cpp  EspExperiment.h  EspExperimentSubtask.cpp  EspExperimentSubtask.h  EspExperimentSubtaskInverted.cpp  EspExperimentSubtaskInverted.h  Experiment.cpp  Experiment.h  FeedForwardNetwork.cpp  FeedForwardNetwork.h  GridWorld.cpp  GridWorld.h  Hunter.cpp  Hunter.h  Network.cpp  Network.h  NetworkCombiner.h  NetworkContainer.cpp  NetworkContainer.h  NetworkContainerEsp.cpp  NetworkContainerEsp.h  NetworkContainerSubtask.cpp  NetworkContainerSubtask.h  NetworkContainerSubtaskInverted.cpp  NetworkContainerSubtaskInverted.h  NetworkSubtaskNormalCombiner.h  (+33 more)
anand/Domain/: Agent.cpp  Agent.h  Domain.h  DomainHunter.cpp  DomainHunter.h  DomainOne.cpp  DomainOne.h  DomainPrey.cpp  DomainPrey.h  DomainTotal.cpp  DomainTotal.h  Hunter.cpp  Hunter.h  PredatorEsp.cpp  PredatorEsp.h  Prey.cpp  Prey.h  Visualizer.cpp
anand/Esp/: Esp.cpp  Esp.h  FeedForwardNetwork.cpp  FeedForwardNetwork.h  FullyRecurrentNetwork.cpp  Network.cpp  Network.h  NetworkContainer.h  NetworkContainerCombiner.cpp  NetworkContainerEsp.cpp  NetworkContainerEsp.h  NetworkContainerSelection.cpp  NetworkContainerSelection.h  NetworkContainerSubtask.cpp  NetworkContainerSubtask.h  NetworkContainerSubtaskInverted.cpp  Neuron.cpp  Neuron.h  SubPop.cpp  SubPop.h
anand/Experiment/: EspExperiment.cpp  EspExperiment.h  EspExperimentSubtask.cpp  EspExperimentSubtask.h  EspExperimentSubtaskInverted.cpp  EspExperimentSubtaskInverted.h  Experiment.h
ashish/AggregateNetworks/: CMakeLists.txt  main.cpp  network.cpp  nnode.cpp
ashish/CreateStarterGeneMonolithic/: CMakeLists.txt
ashish/CreateStarterGenomeMonolithicSelection/: main.cpp
ashish/Hunter/: Domain.cpp  Domain.h  Predator.cpp  experiments.cpp  experiments.cpp.diff  experiments.h  neatmain.cpp
ashish/PredatorPreyHunterDomain/: Agent.h  Basic.h  Domain.h  GridWorld.h  Predator.h  Prey.cpp  Prey.h  main.cpp
ashish/Prey/: Agent.cpp  Domain.cpp  Domain.h  Predator.cpp  Predator.h  experiments.cpp  experiments.h  neatmain.cpp  singleprey_startgenes
ashish/PreyHunter/: Agent.h  Basic.cpp  Basic.h  CMakeLists.txt  Domain.cpp  Domain.h  GridWorld.cpp  GridWorld.h  Hunter.cpp  Hunter.h  Predator.cpp  Predator.h  Prey.cpp  Prey.h  experiments.cpp  experiments.h  main.cpp  neatmain.cpp  singlepreyhunter_startgenes
ashish/PreyHunterAP/: CMakeLists.txt  Defective_genome  experiments.cpp  organism.cpp  population.cpp  predprey_startgenes  results  results_new_weights  statout  test.ne  test_startgenes
ashish/PreyHunterMany/: DomainManyHunters.cpp  DomainManyHunters.h  Predator.cpp  Predator.h  experiments.cpp  experiments.h  neatmain.cpp
ashish/PreyHunterSingle/: Domain.cpp  Domain.h  Predator.h  PredatorSingleOutput.cpp  PredatorSingleOutput.h  experiments.cpp  experiments.cpp.orig  experiments.h  neatmain.cpp
ashish/PreyHunterSingleMany/: Agent.h  DomainManyHunters.cpp  Predator.cpp  PredatorSelection.cpp  PredatorSelection.h  experiments.cpp  experiments.h  neatmain.cpp  nnode.cpp
ashish/PreyHunterSingleManyLogDecisions/: DomainManyHunters.cpp  DomainManyHunters.h  Hunter.cpp  Hunter.h  PredatorSelection.cpp  PredatorSelection.h  experiments.cpp  experiments.h  neatmain.cpp
ashish/VisualizeNetworks/: CMakeLists.txt  main.cpp  network.cpp  network.h
data/: plot_gen_vs_fitness.py  plot_gen_vs_fitness.py~
eclipse config/: code-style.xml
report/: README  abstract.tex  approach.tex  articles.bib  conclusion.tex  discussion.tex  end.tex  figures_esp.tex  figures_neat.tex  figures_schematic.tex  final_report.tex  future_work.tex  introduction.tex  nnmacros.tex  nntwocolumn.sty  paper.aux  paper.dvi  paper.out  paper.tex  preamble.tex  related_work.tex  results.tex
(+140 files in other folders)
